# podcast_tts

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
examples/: example.py  example2.py  example3.py  example_spanish.py  example_voice_clone.py
podcast_tts/: __init__.py  cli.py  core.py  demo.py  podcast_tts.py  subtitles.py
podcast_tts/audio/: __init__.py  io.py  mixing.py
podcast_tts/default_voices/: female2.txt  male1.txt  male2.txt
podcast_tts/engines/: __init__.py  base.py  chatterbox_engine.py  chattts_engine.py  kokoro_engine.py
podcast_tts/text/: __init__.py  chunk.py  normalize.py
tests/: test_audio.py  test_core.py  test_subtitles.py  test_text.py
